bilingual-app/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: ui
  labels:
    app: ui
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
